basic multiple requirements for a post